# c-wspp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.third-party.txt  LICENSE.txt  README.md  build.sh
.github/workflows/: build.yml  check.yml
include/: c-wspp.h
src/: ClientWebSocket.hpp  c-wspp.cpp  config.hpp
test/: test.c
